scrollbar added to votes and fixing coverage git ignore

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -180,3 +180,9 @@ a {
 table {
   border-spacing: 10px;
 }
+
+#votes {
+  width:900px;
+  height:600px;
+  overflow:auto;
+}
